[metadata]
name = pyaid
version = attr: src.pyaid.__version__
author = Jonathan DeCarlo
author-email = everythingiwanted.sortof@gmail.com
home-page = https://github.com/jddecarlo/pyaid
description = A package of helpful utility code for general Python development.
long_description = file: README.md, LICENSE
description-file = README.md
license = MIT
license-file = LICENSE
platform = any
url = https://github.com/jddecarlo/pyaid
download_url = https://github.com/jddecarlo/pyaid/releases/download/v0.0.4/pyaid-0.0.4-py3-none-any.whl
keywords = 
    Python
    Library
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[options]
zip_safe = true
include_package_data = true
python_requires = 
    >= 3.8.*
package_dir=
    = src
packages = find:
setup_requires =
    setuptools
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
# install_requires =     
[options.packages.find]
where = src

[bdist_wheel]
universal = false
